tests/errors/surf_arity_07.experr
range() got an unexpected keyword argument 'nope'
